--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 discord.py
-openai>=1.0.0  # Hoặc chỉ cần "openai" để tự động lấy phiên bản mới nhất
+openai>=1.0.0 # Hoặc chỉ "openai"
 googletrans==4.0.0-rc1
 python-dotenv
